[package]
name = "bevy_are_we_touching"
authors = ["cubidev"]
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "A Collision Library for Bevy"
readme = "README.md"
homepage = "https://github.com/Cubidev3/Bevy-Are-We-Touching"
repository = "https://github.com/Cubidev3/Bevy-Are-We-Touching"
keywords = ["collision", "detection", "gamedev", "api"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
are_we_touching = "0.2.8"
bevy = "0.12.0"
mint = "0.5.9"
